practica2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deploy
  labels:
    app: frontend-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
        - name: frontend-app
          image: cachac/kubelabs:3.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 64Mi
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "150m"

          volumeMounts:
            - name: app-storage
              mountPath: /usr/share/nginx/html
      
      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: app-pvc
