practica2/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  ports:
    - targetPort: 8080 # POD port
      port: 80 # service port
  selector: # POD labels
    app: frontend-app
